--- a/site/index.html
+++ b/site/index.html
@@ -60,12 +60,11 @@
                 </div>
 
      </div>
-      -->
+     -->
 	 <div style="padding:25px;" align="center">
 	 	 <figure>
-     <iframe width="720" height="490" 
-     src="https://youtu.be/HfotdSNnY0E">
-	 </iframe> 
+     <iframe width="720" height="490" src="https://www.youtube.com/embed/HfotdSNnY0E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	
 	      <figcaption><a href="https://devpost.com/software/tweety-wallet">Tweety Wallet Devpost</a></figcaption>
 </figure> 
 	</div>
@@ -90,7 +89,7 @@
 
 
 <div class="header">
-    <p style="color="#ffffff" align="center">&copy; Copyright 2018 Karen Watts, Michael DiCicco, Mumtaser Syed</p>
+    <p style="color="#ffffff" align="center">&copy; Copyright 2018 Karen Watts, Michael DiCicco, Muntaser Syed</p>
 </div>
 </footer>
 
