--- a/site/index.html
+++ b/site/index.html
@@ -9,12 +9,12 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
-<title> Starting </title>
+<title>Tweety Wallet </title>
 </head>
 <body>
 
 <img src="logo.png" height="130" align="left">
-<h1 align="center">"What the hack should I do with my crypto?</h1>
+<h1 align="center">"What the hack should I do with my crypto?"</h1>
 
 
 
