--- a/site/index.html
+++ b/site/index.html
@@ -37,7 +37,7 @@
            <option value="new-zcash.png">Zcash</option>
            <option value="new-bitcoin.png">Bitcoin</option>
            <option value="new-litecoin.png">Litecoin</option>
-        </select> 
+        </select> <br>
         <img align="center" id="myImage" src="new-ethereum.png" alt="Ethereum Wordcloud" height="425" width="650">
       </div>
     </div>
